--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body {
     position: absolute;
     left: 300px;
     cursor: col-resize;
+    z-index: 10; /* Ensure divider is above other elements */
 }
 
 #divider:hover, 
@@ -68,23 +69,14 @@ body {
     left: 0;
     width: 640px; /* 16 columns x 40px */
     height: 640px; /* 16 rows x 40px */
-    display: grid;
-    grid-template-columns: repeat(16, 40px);
-    grid-template-rows: repeat(16, 40px);
     z-index: 0;
 }
 
-#grid-backdrop::before {
-    content: "";
+.grid-cell {
+    border: 1px solid #e5e5e5;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(to right, #e5e5e5 1px, transparent 1px),
-                      linear-gradient(to bottom, #e5e5e5 1px, transparent 1px);
-    background-size: 40px 40px;
-    z-index: 0;
+    width: 40px;
+    height: 40px;
 }
 
 /* Project grid */
